# CyREST-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  rustfmt.toml
examples/: basic_connection.rs  diagnostic.rs
src/: client.rs  error.rs  lib.rs
src/endpoints/: collections.rs  commands.rs  mod.rs  networks.rs
src/models/: edge.rs  mod.rs  network.rs  node.rs
tests/: connection_test.rs
