[package]
name = "cyrest"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
rust-version = "1.70"
description = "A Rust client library for the Cytoscape CyREST API"
documentation = "https://docs.rs/cyrest"
homepage = "https://github.com/yourusername/CyREST-rs"
repository = "https://github.com/yourusername/CyREST-rs"
readme = "README.md"
keywords = ["cytoscape", "cyrest", "api", "client", "network"]
categories = ["api-bindings", "science", "visualization"]
license = "MIT OR Apache-2.0"
exclude = [
    ".github/*",
    "tests/*",
    "benches/*",
    "examples/*"
]

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Async runtime (optional)
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }

# URL handling
url = "2.5"

# Logging (optional but recommended)
log = "0.4"

[dev-dependencies]
# Testing utilities
mockito = "1.6"
pretty_assertions = "1.4"
tokio-test = "0.4"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Additional testing utilities
wiremock = "0.6"

[features]
default = ["async"]
async = ["tokio", "reqwest/default"]
blocking = ["reqwest/blocking"]

[[example]]
name = "basic_usage"

[[example]]
name = "create_network"

[[example]]
name = "query_api"

[[bench]]
name = "client_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"